# MyMediaDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/skyward/mymediademo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/skyward/mymediademo/: Config.kt  MainActivity.kt  MediaCodecPushActivity.kt  PlayVideoActivity.kt  SoftPushActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_media_codec_push.xml  activity_play_video.xml  activity_scan2.xml  activity_soft_push.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/skyward/mymediademo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativeLivelib/: build.gradle
nativeLivelib/src/androidTest/java/com/skyward/nativelivelib/: ExampleInstrumentedTest.kt
nativeLivelib/src/main/: AndroidManifest.xml
nativeLivelib/src/main/cpp/: CMakeLists.txt
nativeLivelib/src/main/cpp/player/: PlayAudio.cpp  PlayCallback.cpp  PlayClient.cpp  PlayDataQueue.cpp  PlayStatus.cpp  PlayVideo.cpp  Playerlib.cpp
nativeLivelib/src/main/cpp/player/include/: PlayAudio.h  PlayCallback.h  PlayClient.h  PlayDataQueue.h  PlayStatus.h  PlayVideo.h
nativeLivelib/src/main/cpp/pusher/: AudioChannel.cpp  PushCallback.cpp  PushClient.cpp  Pushlivelib.cpp  RtmpManager.cpp  VideoChannel.cpp  yuv_convert.cpp
nativeLivelib/src/main/cpp/pusher/include/: AudioChannel.h  PushCallback.h  PushClient.h  RtmpManager.h  VideoChannel.h
nativeLivelib/src/main/cpp/utils/: Constants.h  MyLog.hpp  safe_queue.h
nativeLivelib/src/main/cpp/yuv/: yuv_convert.cpp
nativeLivelib/src/main/java/com/skyward/nativelivelib/: PlayLib.kt  PushLib.kt  YuvLib.java
nativeLivelib/src/main/java/com/skyward/nativelivelib/camera2/: AutoFitSurfaceView.kt  Camera2BaseHelper.kt  Camera2Helper.kt  CameraSizes.kt  ICamera2.kt  ICamera2Helper.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/cameraX/: CameraXController.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/config/: AudioConfiguration.kt  VideoConfiguration.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/encode/audio/: AudioChannel.kt  AudioEncoder.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/encode/base/: BaseChannel.kt  BaseEncode.kt  RtmpPacketListener.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/encode/video/: VideoChannel.kt  VideoEncoder.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/ext/: CommonExt.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/opengl/: PlayGLSurfaceView.kt  PlayRender.kt  ShaderUtil.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/player/: PlayManager.kt  PlayVideoListener.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/push/: PushManager.kt  RTMPPackage.kt
nativeLivelib/src/main/java/com/skyward/nativelivelib/utils/: ConvertUtils.java  ImageUtils.java  LiveTaskManager.java  SaveVideoByteFileUtils.java  YuvFrame.java
nativeLivelib/src/test/java/com/skyward/nativelivelib/: ExampleUnitTest.kt
